--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!-- 메일 api -->
+      	<dependency>
+         	<groupId>org.apache.commons</groupId>
+         	<artifactId>commons-email</artifactId>
+         	<version>1.5</version>
+      	</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
